--- a/LocationTracking/LocationTracking/Base.lproj/Main.storyboard
+++ b/LocationTracking/LocationTracking/Base.lproj/Main.storyboard
@@ -252,29 +252,28 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="hMJ-yL-Pkl">
+                                <rect key="frame" x="90" y="30" width="140" height="31"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="aQ2-Es-xkQ"/>
+                                    <constraint firstAttribute="width" constant="140" id="m17-bf-jmT"/>
+                                </constraints>
+                                <segments>
+                                    <segment title="First"/>
+                                    <segment title="Second"/>
+                                </segments>
+                                <color key="tintColor" red="0.19539620539999999" green="0.64670758930000005" blue="0.85485491069999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <connections>
+                                    <action selector="tappedChangeSegmentedIndex:" destination="dlV-Ev-EFu" eventType="valueChanged" id="oMR-p1-v8L"/>
+                                </connections>
+                            </segmentedControl>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="86" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="rii-NB-TQb">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                <rect key="frame" x="0.0" y="80" width="320" height="488"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                <view key="tableHeaderView" contentMode="scaleToFill" id="N2N-Ow-o51">
-                                    <rect key="frame" x="0.0" y="0.0" width="320" height="151"/>
-                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                    <subviews>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_img_alarm" translatesAutoresizingMaskIntoConstraints="NO" id="Q7a-TH-rYf">
-                                            <rect key="frame" x="0.0" y="0.0" width="320" height="151"/>
-                                        </imageView>
-                                    </subviews>
-                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                    <constraints>
-                                        <constraint firstAttribute="trailing" secondItem="Q7a-TH-rYf" secondAttribute="trailing" id="1CY-jJ-0CM"/>
-                                        <constraint firstItem="Q7a-TH-rYf" firstAttribute="leading" secondItem="N2N-Ow-o51" secondAttribute="leading" id="I4B-eh-Y5D"/>
-                                        <constraint firstAttribute="bottom" secondItem="Q7a-TH-rYf" secondAttribute="bottom" id="MRV-TD-nWh"/>
-                                        <constraint firstItem="Q7a-TH-rYf" firstAttribute="top" secondItem="N2N-Ow-o51" secondAttribute="top" id="agW-h5-LPO"/>
-                                    </constraints>
-                                </view>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="ContactTableViewCell" selectionStyle="default" indentationWidth="10" reuseIdentifier="ContactTableViewCell" rowHeight="85" id="5TQ-gH-dvK" customClass="ContactTableViewCell" customModule="LocationTracking" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="179" width="320" height="85"/>
+                                        <rect key="frame" x="0.0" y="28" width="320" height="85"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="5TQ-gH-dvK" id="jsX-u9-gUg">
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="84"/>
@@ -308,7 +307,7 @@
                                                     </constraints>
                                                 </view>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="348 Kim Ngưu" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K0Q-JC-jvl">
-                                                    <rect key="frame" x="60" y="54.5" width="255" height="25"/>
+                                                    <rect key="frame" x="60" y="55" width="255" height="25"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="25" id="C8h-hQ-a7P"/>
                                                     </constraints>
@@ -317,7 +316,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Z9r-m7-Y0M">
-                                                    <rect key="frame" x="60" y="54.5" width="100" height="25"/>
+                                                    <rect key="frame" x="60" y="55" width="100" height="25"/>
                                                     <color key="backgroundColor" red="0.1450980392" green="0.59607843140000005" blue="0.66274509800000003" alpha="1" colorSpace="calibratedRGB"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="100" id="GsX-9A-OuC"/>
@@ -373,11 +372,14 @@
                         <constraints>
                             <constraint firstItem="zI8-hs-3v7" firstAttribute="top" secondItem="rii-NB-TQb" secondAttribute="bottom" id="DfV-oY-hBE"/>
                             <constraint firstAttribute="trailing" secondItem="rii-NB-TQb" secondAttribute="trailing" id="IFp-79-0hA"/>
-                            <constraint firstItem="rii-NB-TQb" firstAttribute="top" secondItem="Ogu-Gw-5OL" secondAttribute="top" id="aKA-7J-TFe"/>
+                            <constraint firstItem="hMJ-yL-Pkl" firstAttribute="centerX" secondItem="Ogu-Gw-5OL" secondAttribute="centerX" id="O34-0u-mhS"/>
+                            <constraint firstItem="hMJ-yL-Pkl" firstAttribute="top" secondItem="RfQ-c4-RGg" secondAttribute="bottom" constant="10" id="bk9-o5-vzA"/>
                             <constraint firstItem="rii-NB-TQb" firstAttribute="leading" secondItem="Ogu-Gw-5OL" secondAttribute="leading" id="jRB-be-B6N"/>
+                            <constraint firstItem="rii-NB-TQb" firstAttribute="top" secondItem="hMJ-yL-Pkl" secondAttribute="bottom" constant="20" id="xhO-bc-Aac"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="segmented" destination="hMJ-yL-Pkl" id="xEW-dY-szn"/>
                         <outlet property="tableView" destination="rii-NB-TQb" id="KGW-Aq-GRh"/>
                     </connections>
                 </viewController>
@@ -541,7 +543,6 @@
         <image name="check_off" width="22" height="22"/>
         <image name="check_on" width="22" height="22"/>
         <image name="ic_avar" width="75" height="75"/>
-        <image name="ic_img_alarm" width="375" height="284"/>
         <image name="ico_search" width="18" height="18"/>
     </resources>
 </document>
